# academic

./: .gitignore
college/cpp/: test.cpp  test2.cpp
college/cpp/05.02.2024/: main  main.cpp  secondry  secondry.cpp
college/cpp/12.01.2024/: main.cpp
college/cpp/15.01.2024/: main  main.cpp
college/cpp/16.01.2024/: 16.01.2024.cpp  16.01.2024.sln  16.01.2024.vcxproj  16.01.2024.vcxproj.filters
college/cpp/LR10/: LR10.APS  LR10.cpp  LR10.vcxproj  LR10.vcxproj.filters  ProgCPP.sln  ЛР_10_24.docx  ЛР_10_П.docx
college/cpp/LR11/: LR11.cpp  LR11.vcxproj  LR11.vcxproj.filters  ЛР_11_HV.docx  ЛР_11_П.docx
college/cpp/LR12/: LR12.vcxproj  main.cpp  ЛР_12_24.docx
college/cpp/LR13/: LR13.cpp  LR13.vcxproj  LR13.vcxproj.filters
college/cpp/LR14/: lr14.cpp
college/cpp/LR15/: lr15.cc
college/cpp/LR16/: lr16.cpp
college/cpp/LR18/: CMakeLists.txt  main.cpp  sourcefiles.cpp  sourcefiles.h  test.cpp  test.h
college/cpp/LR19/: CMakeLists.txt  Group.cpp  Group.h  MainView.cpp  MainView.h  Student.cpp  Student.h  main.cpp
college/cpp/LR20/: CMakeLists.txt  book.cpp  book.h  library.cpp  library.h  librarycli.cpp  librarycli.h  main.cpp  range.cpp  range.h
college/cpp/OKR/: CMakeLists.txt  main.cpp
college/cpp/SR26012024/: SR26012024 copy.cpp  SR26012024.cpp  SR26012024.vcxproj  SR26012024.vcxproj.filters
college/cpp/demo/: pointers.cpp
college/cpp/ekzamen/: CMakeLists.txt  Herhalo_first.cpp  Herhalo_third.cpp  Silchenko_first.cpp  Silchenko_third.cpp
college/cpp/lr1/: met1.cpp  test.cpp  z1.cpp
college/cpp/lr17/: Group.cpp  Group.hpp  MainView.cpp  MainView.hpp  Null.hpp  Student.cpp  Student.hpp  lr17.cpp
college/cpp/lr2/: check.cpp  lr2.cpp  Новий Документ Microsoft Word.docx
college/cpp/lr3/: answers.txt  lr3.cpp  ЛР_3.doc
college/cpp/lr4/: lr4.cpp  Новий Документ Microsoft Word.docx
college/cpp/lr5/: main.cpp  ЛР_5.doc
college/cpp/lr6/: main.cpp  ЛР_6.doc
college/cpp/lr7/: main.cpp  ЛР_7.docx
college/cpp/lr8/: main.cpp  ЛР_8.docx
college/cpp/lr9/: main.cpp  mas.cpp  ЛР_9.docx
college/cpp/okr1/: okr.cpp
college/cpp/pr1/: main.cpp  ПР_1.doc
college/cpp/seminar110424/: CMakeLists.txt  main.cpp
college/crypto/DES/: main.py  (+2 more)
(+196 files in other folders)
